--- a/kplr_TH1RW3T.ipynb
+++ b/kplr_TH1RW3T.ipynb
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4ad8c9ed-9994-4b66-af5b-084e8bf524d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "event_RW3T= '/Users/kate/Desktop/Summer_work/kepler_data_and_notebooks/kplr_anc-eng_TH1RW3T.fits'\n",
+    "event_RW3T= '/Users/kate/Desktop/Summer_work/kplr_anc-eng_TH1RW3T.fits'\n",
     "hdul=fits.open(event_RW3T, mmemmap=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7c6accb8-28b2-415e-8ece-fa539c70bcd3",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b7a905e0-5985-400d-a9dd-01de06b665e1",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "33cc3aa7-3f24-4e9e-99ec-f4767d357cf4",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2419515</i>\n",
-       "<table id=\"table4762155920\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4802199088\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>MJD</th><th>UTC</th><th>LC</th><th>SC</th><th>TH1RW3T</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>str23</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>54949.283050925995</td><td>2009-04-28T06:47:35.600</td><td>384.0</td><td>1.0</td><td>10.031017243005536</td></tr>\n",
@@ -124,7 +124,7 @@
        "   56728.012735417 2014-03-12T00:18:20.340 87433.0 2611479.0 27.366490373656692"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3b7b30dd-1bee-47c6-801b-fdf8b9631a00",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "36a7bf57-22af-4a1f-a083-dd4e8d8e594c",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6b827fe2-2d57-4c1d-aa54-6bde98997e82",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-07-17\n"
+      "2024-07-26\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "419e2f44-f827-4c1f-93fb-c4fbdec7136c",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7d0bf9d2-546a-4dcc-a345-520a7013e4e5",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-07-17 01:08:20.145893\n"
+      "2024-07-26 09:56:58.222027\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9abec40b-f07a-410f-bc75-2715f0641221",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2e2ed75e-50e8-4f29-80a8-aaf51deff55f",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2419515</i>\n",
-       "<table id=\"table4762155920\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4802199088\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>MJD</th><th>UTC</th><th>LC</th><th>SC</th><th>TH1RW3T</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>str23</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>54949.283050925995</td><td>2009-04-28T06:47:35.600</td><td>384.0</td><td>1.0</td><td>10.031017243005536</td></tr>\n",
@@ -271,7 +271,7 @@
        "   56728.012735417 2014-03-12T00:18:20.340 87433.0 2611479.0 27.366490373656692"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "b08855b6-eb6e-457a-b5b9-f88575ff4941",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "7a9f3188-253f-430e-a101-0204a301ba3a",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "15af3667-d212-45d3-9684-faaaf209abc6",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "19fa9c2a-b4c1-4186-abfc-83a890c19e7e",
    "metadata": {
     "scrolled": true
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "2cde40e6-bb9a-4e34-831f-6d9f37ac4789",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "4191bf77-e737-471d-b7b3-fccfd6ec0582",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f3acbe4b-e3a4-4ddb-b67a-98116c9a252f",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "0657b489-c2d5-4589-88e4-062ea67015c0",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "4256aa9f-2692-40b7-9490-d45b293d7512",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "90dc089e-9090-4375-aed1-921c639b7ccf",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "dd8a6cad-6661-453b-9a05-4c51ffc20627",
    "metadata": {
     "scrolled": true
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "163e5209-151f-4903-bdd6-85ffaeed9da7",
    "metadata": {},
    "outputs": [],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "fa44d3b2-c5ec-45b5-b91f-9a3968c55974",
    "metadata": {},
    "outputs": [],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "6b839901-c725-4582-8602-65f4b9cbad8b",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "c30d57e2-6e0e-4384-9dd2-6b31b47dfbfc",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "53821b20-a9ca-40b9-bba2-ade8942ce8aa",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "1bef6851-333c-437d-b7d5-29181c1c1bd5",
    "metadata": {},
    "outputs": [],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "15adc29e-0fb7-4af4-a12d-f32a7b1c9bc8",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "065ef8ef-a9ef-4ad6-aa94-4de2f67446d9",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "aa36bad4-a026-4637-9c46-77b1e766ac6d",
    "metadata": {},
    "outputs": [],
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "2b5bfff9-23a8-4525-bdfe-6702630d46ae",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "ec7d9786-c744-43bb-8ab5-907a7cf24c54",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "3cc19b41-137c-4668-ac25-4c67f8a397dc",
    "metadata": {},
    "outputs": [],
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "deb45773-badb-4b9d-b486-6e0c87e432bc",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "5e769c8b-be64-4c5e-b458-8fd6ede371dd",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "e7102030-0f75-495e-a4a6-1b4b62bd1e45",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "e42a300f-2cac-443c-a157-315f2a50cf77",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "281ab178-0907-487f-825c-36b8fce39c25",
    "metadata": {},
    "outputs": [
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "c28e93bd-55b6-4508-9e4c-b789d892c46d",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "7c641f11-4678-49f2-8766-e9a8880bcd01",
    "metadata": {},
    "outputs": [],
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "493f64b6-2913-499d-85bd-0a5b190cff7d",
    "metadata": {},
    "outputs": [],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "a7b42939-1612-43ad-beab-b94f1b82ad3b",
    "metadata": {},
    "outputs": [],
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "0658542b-5162-4692-b593-5afcbd1959cb",
    "metadata": {},
    "outputs": [],
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "bfb1cbf3-2779-4458-ad2e-3fdd7c89543a",
    "metadata": {},
    "outputs": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "c0ba519c-a37e-4ff1-b293-fc58d45ba605",
    "metadata": {},
    "outputs": [
@@ -1071,7 +1071,7 @@
        "2010-01-01 00:04:11.812  55197.002914  12507.0  363696.0  22.18341"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "590fe2d3-b551-4461-b7e9-5f628c177fd0",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1100,7 @@
     }
    ],
    "source": [
-    "event_RW4T= '/Users/kate/Desktop/Summer_work/kepler_data_and_notebooks/kplr_anc-eng_TH1RW4T.fits'\n",
+    "event_RW4T= '/Users/kate/Desktop/Summer_work/kplr_anc-eng_TH1RW4T.fits'\n",
     "hdul2=fits.open(event_RW4T, mmemmap=True)\n",
     "table_hdu2=hdul2[1]\n",
     "df2=pd.DataFrame(table_hdu2.data)\n",
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "dec1328a-8ee1-401c-9cf0-2907888d89ae",
    "metadata": {},
    "outputs": [],
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "248e55d8-a918-42b6-9de2-7cf4f1fd9a6a",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1263,7 @@
        "[559580 rows x 5 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "d6154708-36b7-4674-b048-2d97fa98681d",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1285,7 @@
        "        809.25659682,  407.81325628])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "8f8626c2-8640-498d-af1f-3fbb3668d6c4",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1306,7 @@
        "nan"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "02603bb4-57be-4b08-b5d9-2fd7a38dc6bc",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1327,7 @@
        "array([1.56084906e+08])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,29 +1338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "c99a2284-c1a1-46f9-9343-fa70a44795bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "full_2010['TH1RW3T'].corr(full_2010_2['TH1RW4T'], method='kendall')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 56,
-   "id": "4f93b4e7-98b7-4258-94ff-f345c5bfc31c",
+   "id": "c99a2284-c1a1-46f9-9343-fa70a44795bb",
    "metadata": {},
    "outputs": [
     {
@@ -1375,12 +1354,33 @@
     }
    ],
    "source": [
-    "full_2010['TH1RW3T'].corr(full_2010_2['TH1RW4T'], method='spearman')"
+    "full_2010['TH1RW3T'].corr(full_2010_2['TH1RW4T'], method='kendall')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "4f93b4e7-98b7-4258-94ff-f345c5bfc31c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_2010['TH1RW3T'].corr(full_2010_2['TH1RW4T'], method='spearman')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "e82658dd-c4e3-4d35-aaa5-d87e3ef891cb",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "bae5908e-db92-4657-b95c-8bc7c70b0d29",
    "metadata": {},
    "outputs": [
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "id": "ae26b384-d57a-49ba-aa68-aef1ca73e929",
    "metadata": {},
    "outputs": [
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "id": "d855251a-fec0-4af9-b689-d09be5da9c94",
    "metadata": {},
    "outputs": [
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "id": "eb0613da-d4b4-4150-8b4d-17ecdc6000a2",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "id": "ee9c4bdf-e7a1-44ed-b35a-6f6af09e0745",
    "metadata": {},
    "outputs": [
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "id": "da70f24d-9f36-4fd7-9044-8e8659dca768",
    "metadata": {},
    "outputs": [
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "id": "c642c1a3-6a13-4a09-b230-b2043d23b5d2",
    "metadata": {},
    "outputs": [
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "id": "1f47a15f-36ab-4c52-afd1-5ce3ceaabbce",
    "metadata": {},
    "outputs": [],
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "id": "994aee53-3a94-4f35-9fb5-4f52eacf5e3b",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1695,7 @@
        "[38983 rows x 4 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "id": "90604e02-ccf5-4ffc-9c81-c56f4b030cad",
    "metadata": {},
    "outputs": [
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "id": "0f432266-abbb-4b6f-b646-103a1beb0ab1",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1874,7 @@
        "[38983 rows x 4 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "id": "41cbd963-4d8b-4e75-ba99-790bedc7a2ed",
    "metadata": {},
    "outputs": [
@@ -1912,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "id": "a73dd540-323d-46c9-8880-c9dbb36e7013",
    "metadata": {},
    "outputs": [],
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "id": "830a1d3b-58e4-47c6-9d07-1e5354f83a1d",
    "metadata": {},
    "outputs": [
@@ -2005,6 +2005,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5bf15ec3-aff5-47af-8f19-463a4938b9f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_pointing= '/Users/kate/Desktop/Summer_work/kplr_anc-eng_AttitudeErrors.fits'\n",
+    "hdul3=fits.open(event_pointing, mmemmap=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66b7167b-8352-4963-a49d-061772c71c30",
    "metadata": {},
    "outputs": [],
    "source": []
